fix overlay in portfolio section, paths to svg, icon positioning in modal form, gaps and paddings

--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ h4,
 h5,
 h6,
 p {
-  margin: 0 auto;
+  margin: 0;
 }
 
 img {
@@ -162,6 +162,8 @@ section {
   background-size: cover;
   max-width: 1440px;
   margin: 0 auto;
+  padding-top: 188px;
+  padding-bottom: 188px;
 }
 
 .slogan-name {
@@ -273,7 +275,7 @@ section {
 }
 
 .card-container {
-  padding: 32px 0;
+  padding: 32px 16px;
 }
 
 .team-member {
@@ -358,18 +360,19 @@ section {
 
 .cover-txt {
   position: absolute;
+  top: 0;
   width: 100%;
   height: 100%;
   color: #f4f4fd;
   letter-spacing: 0.02em;
   background-color: #4d5ae5;
   padding: 40px 32px;
-  transform: translateY(0);
+  transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .cases-item:hover .cover-txt {
-  transform: translateY(-100%);
+  transform: translateY(0);
 }
 
 .case-card {
@@ -534,11 +537,17 @@ section {
   height: 100%;
 
   opacity: 0;
+  visibility: hidden;
   pointer-events: none;
+
+  transition:
+    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-overlay.is-open {
   opacity: 1;
+  visibility: visible;
   pointer-events: auto;
 }
 
@@ -640,7 +649,8 @@ section {
 .modal-input-icon {
   position: absolute;
   left: 16px;
-  top: 8px;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .modal-textarea {
@@ -676,6 +686,8 @@ section {
 }
 
 .checkbox-label {
+  display: flex;
+  gap: 8px;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
